Problem Solved With The Best Score